; ModuleID = '/home/carl/AnghaBench/freebsd/bin/sh/extr_memalloc.c_ckrealloc.c'
source_filename = "/home/carl/AnghaBench/freebsd/bin/sh/extr_memalloc.c_ckrealloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INTOFF = common dso_local global i32 0, align 4
@INTON = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"Out of space\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ckrealloc(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @INTOFF, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i32* @realloc(i32* %6, i32 %7)
  store i32* %8, i32** %3, align 8
  %9 = load i32, i32* @INTON, align 4
  %10 = load i32*, i32** %3, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %12, label %14

12:                                               ; preds = %2
  %13 = call i32 @error(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  br label %14

14:                                               ; preds = %12, %2
  %15 = load i32*, i32** %3, align 8
  ret i32* %15
}

declare dso_local i32* @realloc(i32*, i32) #1

declare dso_local i32 @error(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
